cabal-version:       2.2
name:                shaketest
version:             0.1.0.0
synopsis:            Shake test
description:         Shake test
homepage:            https://github.com/louispan/shaketest
license:             BSD-3-Clause
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2019 Louis Pan
category:            Experiment
build-type:          Simple

executable shaketest
  hs-source-dirs:      .
  main-is:             Shaketest.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-I0
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , Cabal
                     , deepseq
                     , directory
                     , extra
                     , hashable
                     , safe
                     , shake
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/javascript-extras
